fix logo width on mobile

--- a/Client/wwwroot/css/site.css
+++ b/Client/wwwroot/css/site.css
@@ -25,7 +25,8 @@
     }
 
 .mudblazor-svg {
-    width: 500px;
+    width:100%;
+    max-width: 500px;
     flex-shrink: 0;
     /*-webkit-filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 1));*/
     filter: drop-shadow(11px 15px 7px rgba(0,0,0,.2));
